fix: add z-index to dropdown bib

--- a/components/dropdown/src/styles/classic/style.scss
+++ b/components/dropdown/src/styles/classic/style.scss
@@ -78,9 +78,3 @@
   }
   /* stylelint-enable selector-id-pattern */
 }
-
-:host([matchwidth]) {
-  #bibSizer {
-    width: 100%;
-  }
-}
