--- a/components/dropdown/src/styles/emphasized/style.scss
+++ b/components/dropdown/src/styles/emphasized/style.scss
@@ -13,12 +13,6 @@
 
 /* stylelint-disable no-descending-specificity, selector-max-attribute, selector-max-class, selector-class-pattern, selector-not-notation */
 
-// COMMON FOR ALL --------------------------------------------
-
-:host {
-  display: block;
-}
-
 .layout-emphasized,
 .layout-emphasized-left,
 .layout-emphasized-right {
@@ -26,28 +20,6 @@
     margin-right: var(--ds-size-300, vac.$ds-size-300);
   }
 }
-
-.wrapper {
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  outline: none;
-}
-
-.triggerContentWrapper {
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-  flex: 1;
-  align-items: center;
-  justify-content: center;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-// LAYOUTS ---------------------------------------------------
 
 :host([layout*='emphasized'][shape*='pill']:not([layout*='right'])) {
   .leftIndent {
